major fixes and changed pages

--- a/html/error405.html
+++ b/html/error405.html
@@ -22,9 +22,9 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-12 text-center">
-                        <span class="display-1 d-block">400</span>
+                        <span class="display-1 d-block">405</span>
                         <div class="mb-4 lead">Something went wrong!</div>
-                        <div class="mb-4 lead">Bad request<br>Maybe the requested page is a directory(?)</div>
+                        <div class="mb-4 lead">The requested method is not allowed</div>
                         <a href=home.html class="btn btn-link">Go back to Home page</a>
                     </div>
                 </div>
