--- a/html/home.html
+++ b/html/home.html
@@ -1,58 +1,77 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Bibliografia - João da Silva</title>
+        <title>Sample page</title>
         <meta charset="uft-8">
-        <link rel="icon" href="favicon.png">
-        <link rel="stylesheet" href="css/arquivo_css.css">
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
+        <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+        <style>
+                html,body{
+                    background:#000;
+                    margin:0;
+                }
+                p,h1,h3 {
+                    color: antiquewhite;
+                }
+                .centered{
+                    width:400px;
+                    height:400px;
+                    position:absolute;
+                    top:50%;
+                    left:50%;
+                    transform:translate(-50%,-50%);
+                    background:#000;
+                    filter: blur(10px) contrast(20);
+                }
+                .blob-1,.blob-2{
+                    width:70px;
+                    height:70px;
+                    position:absolute;
+                    background:#fff;
+                    border-radius:50%;
+                    top:50%;left:50%;
+                    transform:translate(-50%,-50%);
+                }
+                .blob-1{
+                    left:20%;
+                    animation:osc-l 3.5s ease infinite;
+                }
+                .blob-2{
+                    left:80%;
+                    animation:osc-r 3.5s ease infinite;
+                    background:rgb(192, 120, 52);
+                }
+                @keyframes osc-l{
+                    0%{left:20%;}
+                    50%{left:50%;}
+                    100%{left:20%;}
+                }
+                @keyframes osc-r{
+                    0%{left:80%;}
+                    50%{left:50%;}
+                    100%{left:80%;}
+                }
+            </style>
+       
     </head>
     <body>
-        <main>
-            <h1>Sobre mim</h1>
-            <div>
-                <p>Moro em São Paulo mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de <em>qualidade</em>, <em>durabilidade</em> e que <em>agregam valor</em> para meus clientes.</p>
-                <p>Trabalho usando a web como plataforma, ou seja, respiro HTML5, CSS3 e JavaScript (ou melhor: ECMASCript). Crio sites para todos, seguindo as principais diretivas de acessibilidade, responsividade e web semântica, sem descuidar da qualidade de código.</p>
-
-                <h2>Como trabalho</h2>
-                <blockquote>
-                    <p>João é o melhor desenvolvedor front-end com quem já trabalhei. Muito eficiente e muito capaz. Recomendo sem dúvidas!</p>
-                    <cite>José Souza, Fiat</cite>
-                </blockquote>
-                <p>Satisfazer meus clientes é prioridade. Para isso, garanto um processo de desenvolvimento altamente interativo, baseado em feedback contínuo. <strong>Não trabalho com escopo fechado</strong>: o cliente é que decide quando o produto está pronto.</p>
-                <p>Também não trabalho com prazos fechados: <strong>qualidade é importante demais para ser sacrificada.</strong></p>
-
-                <h2>Experiência</h2>
-                <blockquote>
-                    <p>João domina as tecnologias como ninguém. Eu apresentava um problema, ele tinha na ponta da língua a solução mais adequada com as tecnologias mais recentes.</p>
-                    <cite>Manoel Santos, Petrobrás</cite>
-                </blockquote>
-                <p>Já desenvolvi projetos para grandes empresas como <a href="https://www.bmw.com">BMW</a>, <a href="https://www.uol.com.br">UOL</a> e <a href="http://www.ibm.com.br">IBM</a>. Neles, o foco principal era entregar uma experiência imersiva e impactante para o usuário final sem descuidar do desempenho e da acessibilidade da página.</p>
-                <p>Também já fui contratado para transformar grandes portais, como <a href="http://www.terra.com.br">Terra</a> e <a href="http://www.g1.globo.com">G1</a>, em páginas responsivas. Fui responsável por renovar o layout, reorganizar o conteúdo e re-escrever o código de forma mais reaproveitável.</p>
-
-                <h2>Comunidade</h2>
-                <p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei <a href="portfolio.html">diversas palestras</a> e mantenho <a href="blog.html">um blog.</a></p>
+        <div class="container">
+            <h1> T1 Redes de Computadores</h1>
+            <h3>Equipe:</h3>
+            <p>Marcelo H. H. M. de Oliveira</p>
+            <p>Isadora Gallerani</p>
+            <p>Gabrieli Santos</p>
+        </div>
+        <div class="container">
+            <div class="row text-center">
+            <div class = "centered">
+            <div class = "blob-1"></div>
+            <div class = "blob-2"></div>
+        </div>
             </div>
-        </main>
-            <img src="image/arquivo_foto.jpg" alt="Foto de João da Silva">
-        <aside>
-            <div>
-                <h1>João da Silva</h1>
-                <nav>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="bio.html">Sobre mim</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="contato.html">Contato</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </aside>
-        <footer>
-            &copy; João da Silva 2014
-        </footer>
+        </div>
     </body>
 </html>
 
